--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -221,6 +221,67 @@ header {
               border-right: 2px solid rgba(38, 38, 38, 0.5);
               border-radius: 10px;
             }
+
+            &.logged {
+              .fa-user-circle {
+                font-size: 2.5rem;
+              }
+
+              .logged-popup {
+                background-color: #ffffff;
+                border-radius: 0.5rem;
+                position: absolute;
+                right: 0;
+                border: 0.3rem solid #66666650;
+                width: 30rem;
+                transition: ease-in all 0.3s;
+
+                .user-detail-list {
+                  .user-detail-item {
+                    padding: 1rem;
+                    border: 0.2rem solid #c3c3c350;
+
+                    .fa-user-circle {
+                      font-size: 4rem;
+                      margin-right: 1rem;
+                      color: #006fb7;
+                    }
+
+                    a {
+                      text-align: left;
+                      line-height: 1.3;
+                      font-size: 1.7rem;
+                      color: #006fb7;
+                      display: block;
+
+                      .notify {
+                        height: 0.8rem;
+                        width: 0.8rem;
+                        background-color: #006fb7;
+                        border-radius: 100%;
+                        display: inline-block;
+                      }
+                    }
+
+                    .user-name {
+                      text-align: left;
+                      line-height: 1.3;
+                      font-size: 1.7rem;
+
+                      a {
+                        color: #e94250;
+                      }
+                    }
+                  }
+                }
+
+                &.active {
+                  visibility: visible;
+                  opacity: 1;
+                  transition: ease-in all 0.3s;
+                }
+              }
+            }
           }
         }
       }
@@ -282,6 +343,14 @@ header {
               border: none;
               .nav-link {
                 font-size: 2rem;
+              }
+
+              &.logged {
+                .logged-popup {
+                  right: 50%;
+                  transform: translateX(50%);
+                  display: none;
+                }
               }
             }
           }
@@ -5575,6 +5644,282 @@ footer {
 }
 /*message popup css end*/
 
+/*profile page css start*/
+.profile-page {
+  .new-booking-wrapper {
+    .booking-details-section {
+      .header-top {
+        .header-left {
+          p {
+            font-size: 3rem;
+            font-weight: 500;
+            color: #333;
+            line-height: 1;
+          }
+        }
+      }
+    }
+  }
+}
+
+.profile-detail-wrapper {
+  .profile-details-section {
+    position: relative;
+    padding: 0 2rem;
+
+    .header-top {
+      position: sticky;
+      width: 100%;
+      top: 0;
+      z-index: 9;
+      margin: 0 -1.9rem;
+      margin-bottom: 4rem;
+      padding: 0 2rem;
+      padding-bottom: 1rem;
+      padding-top: 16rem;
+      background-color: #fff;
+
+      .header-left {
+        p {
+          font-size: 3rem;
+          font-weight: 500;
+          color: #333;
+          line-height: 1;
+        }
+      }
+    }
+
+    .profile-img {
+      display: inline-block;
+      position: relative;
+
+      .fa-user-circle {
+        font-size: 20rem;
+      }
+
+      .fa-pen {
+        font-size: 4rem;
+        position: absolute;
+        right: 1rem;
+        top: 1rem;
+        padding: 1rem;
+        border: 0.2rem solid #000;
+        border-radius: 100%;
+        background-color: #fff;
+      }
+    }
+
+    .user-review-wrapper {
+      margin-top: 2.5rem;
+
+      li {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0.75rem 0;
+        width: 100%;
+
+        p {
+          font-size: 1.7rem;
+          width: 70%;
+          text-align: left;
+        }
+
+        .date {
+          text-align: right;
+          font-size: 1.7rem;
+          font-weight: 500;
+          color: #e94250;
+        }
+
+        h6 {
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+          font-size: 1.7rem;
+          font-weight: 500;
+          color: #e94250;
+          width: 30%;
+
+          img {
+            max-height: 1.8rem;
+            margin-left: 0.3rem;
+          }
+        }
+      }
+    }
+
+    .profile-btn {
+      background: none;
+      border: 0.2rem solid #999;
+      border-radius: 0.5rem;
+      color: #333;
+      font-size: 1.3rem;
+      font-weight: 500;
+      padding: 1rem 2rem;
+      display: block;
+      margin-top: 3rem;
+      transition: all 0.3s ease-in;
+
+      &:hover {
+        background-color: #e94250;
+        border-color: #e94250;
+        color: #ffffff;
+        transition: all 0.3s ease-in;
+      }
+    }
+
+    .profile-update-form {
+      .form-tile {
+        margin-top: 1.5rem;
+        padding: 0 2rem;
+
+        .form-label {
+          font-size: 1.4rem;
+        }
+
+        .form-control {
+          height: 3.5rem;
+          font-size: 1.5rem;
+        }
+
+        textarea {
+          &.form-control {
+            height: 13rem;
+          }
+        }
+      }
+
+      p {
+        font-size: 1.3rem;
+        line-height: 1.5;
+        color: #666;
+        margin-top: 1.5rem;
+      }
+    }
+
+    .corporate-data-ttl {
+      font-size: 1.7rem;
+      font-weight: 500;
+      text-transform: uppercase;
+      color: #666;
+      line-height: 1.5;
+      margin: 5rem 0 3rem 2rem;
+    }
+
+    .action-btn {
+      margin: 2rem;
+
+      .btn-secondary,
+      .btn-primary {
+        width: 100%;
+        font-size: 1.3rem;
+        padding: 1rem;
+        text-transform: uppercase;
+      }
+    }
+
+    .plans-wrapper {
+      padding: 0 2rem;
+
+      .plan-tile {
+        margin: 1rem 0;
+
+        h6 {
+          font-weight: 500;
+          color: #009aff;
+        }
+
+        .active-plan {
+          background-color: #009aff;
+          text-transform: uppercase;
+          padding: 1rem 1.5rem;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+
+          p {
+            color: #ffffff;
+            font-size: 1.3rem;
+            margin-top: 0;
+          }
+
+          span {
+            color: #ffffff;
+            font-weight: 500;
+            line-height: 1;
+          }
+
+          .fa-chevron-right {
+            color: #ffffff;
+            font-size: 1.5rem;
+          }
+        }
+      }
+    }
+
+    &:last-child {
+      padding-bottom: 6rem;
+    }
+  }
+
+  @include media767 {
+    .profile-details-section {
+      padding-left: calc(var(--bs-gutter-x) / 2);
+      padding-right: calc(var(--bs-gutter-x) / 2);
+      padding-top: 1rem;
+
+      .header-top {
+        z-index: 2;
+        padding-top: 1rem;
+        width: Calc(100%-calc(var(--bs-gutter-x) / 1));
+        left: calc(var(--bs-gutter-x) / 2);
+        right: calc(var(--bs-gutter-x) / 2);
+        top: 14rem;
+        margin-left: 0;
+        margin-right: 0;
+        padding-left: 1rem;
+      }
+
+      .user-review-wrapper {
+        padding: 0 2rem;
+      }
+
+      .profile-btn {
+        margin-left: 2rem;
+        margin-right: 2rem;
+      }
+
+      .profile-update-form {
+        p {
+          padding-left: 2rem;
+          padding-right: 2rem;
+        }
+      }
+    }
+  }
+
+  @include media576 {
+    .profile-details-section {
+      .header-top {
+        top: 22rem;
+      }
+      .plans-wrapper {
+        .plan-tile {
+          .active-plan {
+            p {
+              padding-left: 0;
+              padding-right: 0;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+/*profile page css end*/
+
 /*contact page css start*/
 .contact-wrapper {
   .gx-5 {
@@ -5636,6 +5981,59 @@ footer {
 .contact-page {
   footer {
     background-color: transparent;
+  }
+
+  .magazine-detail-wrapper {
+    .magazine-detail-ttl {
+      font-size: 3rem;
+      font-weight: 500;
+      color: #333;
+      line-height: 1;
+    }
+
+    .magazine-detail-desc {
+      padding: 2rem 4rem;
+
+      h2 {
+        font-size: 3.5rem;
+        font-weight: 500;
+        color: #333;
+        line-height: 1.2;
+        margin-bottom: 2rem;
+      }
+
+      p {
+        margin-bottom: 2rem;
+      }
+
+      .wpcf7-form {
+        p {
+          margin-bottom: 1.5rem;
+          font-size: 1.4rem;
+
+          label {
+            .wpcf7-form-control-wrap {
+              padding-top: 0.5rem;
+              display: block;
+
+              .wpcf7-form-control {
+                height: 3.5rem;
+                font-size: 1.5rem;
+                border: 1px solid #ced4da;
+              }
+
+              textarea {
+                &.wpcf7-form-control {
+                  height: auto;
+                  line-height: 1.5;
+                  padding: 1rem;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
 /*contact page css end*/
