--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -5775,11 +5775,13 @@ footer {
         padding: 0 2rem;
 
         .form-label {
-          font-size: 1.4rem;
+          font-size: 1.3rem;
+          color: #006fb7;
+          font-weight: 500;
         }
 
         .form-control {
-          height: 3.5rem;
+          min-height: 4.8rem;
           font-size: 1.5rem;
         }
 
@@ -5922,22 +5924,26 @@ footer {
 
 /*contact page css start*/
 .contact-wrapper {
-  .gx-5 {
-    --bs-gutter-x: 15rem;
+  background-image: url("../images/contact-bg.png");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  padding: 15rem 0;
+
+  .contact-form-wrapper {
+    background-image: url("../images/contact-form-bg.png");
+    background-size: cover;
+    padding: 5rem 10rem;
+    text-align: center;
+    width: 80%;
+    margin: 5rem auto;
 
     .section-ttl {
       line-height: 1;
       margin: 0;
       margin-left: -1rem;
       padding: 1rem;
-      color: #db3e4b;
-
-      &:hover {
-        color: #fff !important;
-        &::after {
-          background-color: #db3e4b;
-        }
-      }
+      color: #000;
     }
 
     .section-desc {
@@ -5948,21 +5954,71 @@ footer {
 
     .contact-form {
       margin: 5rem auto;
+      text-align: left;
+      width: 50%;
 
       .form-label {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
+        font-weight: 500;
       }
 
       .form-control {
         height: 3.5rem;
         font-size: 1.5rem;
+        color: #000;
+        font-weight: 500;
+        margin: 2rem 0;
+        background-color: transparent;
+        border: 0.2rem solid #000;
+
+        &::placeholder {
+          color: #000;
+          font-weight: 500;
+        }
+      }
+
+      textarea {
+        &.form-control {
+          height: 10rem;
+          margin-top: 0;
+        }
+      }
+
+      .action-btn {
+        .btn-outline-secondary {
+          width: 55%;
+          border: 0.2rem solid #000;
+          padding: 0.7rem 1rem;
+          font-size: 1.6rem;
+          font-weight: 500;
+          color: #000;
+
+          &:hover {
+            background-color: transparent;
+          }
+        }
       }
     }
   }
 
   @include media767 {
-    .gx-5 {
-      --bs-gutter-x: 10rem;
+    padding: 7rem 0;
+    background-position: unset;
+
+    .section-desc {
+      font-size: 1.5rem;
+      line-height: 1.3;
+    }
+
+    .contact-form-wrapper {
+      width: 90%;
+      padding: 3rem;
+      background-image: none;
+      background-color: #ffffffb5;
+
+      .contact-form {
+        width: 80%;
+      }
     }
   }
 
@@ -5971,16 +6027,10 @@ footer {
       --bs-gutter-x: 5rem;
     }
   }
-
-  @include customMedia(350) {
-    .gx-5 {
-      --bs-gutter-x: 3rem;
-    }
-  }
 }
 .contact-page {
   footer {
-    background-color: transparent;
+    background-color: #000;
   }
 
   .magazine-detail-wrapper {
