--- a/css/main.css
+++ b/css/main.css
@@ -6541,11 +6541,13 @@ footer .sec-ttl {
 }
 
 .profile-detail-wrapper .profile-details-section .profile-update-form .form-tile .form-label {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
+  color: #006fb7;
+  font-weight: 500;
 }
 
 .profile-detail-wrapper .profile-details-section .profile-update-form .form-tile .form-control {
-  height: 3.5rem;
+  min-height: 4.8rem;
   font-size: 1.5rem;
 }
 
@@ -6673,48 +6675,113 @@ footer .sec-ttl {
 
 /*profile page css end*/
 /*contact page css start*/
-.contact-wrapper .gx-5 {
-  --bs-gutter-x: 15rem;
+.contact-wrapper {
+  background-image: url("../images/contact-bg.png");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  padding: 15rem 0;
 }
 
-.contact-wrapper .gx-5 .section-ttl {
+.contact-wrapper .contact-form-wrapper {
+  background-image: url("../images/contact-form-bg.png");
+  background-size: cover;
+  padding: 5rem 10rem;
+  text-align: center;
+  width: 80%;
+  margin: 5rem auto;
+}
+
+.contact-wrapper .contact-form-wrapper .section-ttl {
   line-height: 1;
   margin: 0;
   margin-left: -1rem;
   padding: 1rem;
-  color: #db3e4b;
+  color: #000;
 }
 
-.contact-wrapper .gx-5 .section-ttl:hover {
-  color: #fff !important;
-}
-
-.contact-wrapper .gx-5 .section-ttl:hover::after {
-  background-color: #db3e4b;
-}
-
-.contact-wrapper .gx-5 .section-desc {
+.contact-wrapper .contact-form-wrapper .section-desc {
   width: 100%;
   opacity: 1;
   margin-top: auto;
 }
 
-.contact-wrapper .gx-5 .contact-form {
+.contact-wrapper .contact-form-wrapper .contact-form {
   margin: 5rem auto;
+  text-align: left;
+  width: 50%;
 }
 
-.contact-wrapper .gx-5 .contact-form .form-label {
-  font-size: 1.5rem;
+.contact-wrapper .contact-form-wrapper .contact-form .form-label {
+  font-size: 1.4rem;
+  font-weight: 500;
 }
 
-.contact-wrapper .gx-5 .contact-form .form-control {
+.contact-wrapper .contact-form-wrapper .contact-form .form-control {
   height: 3.5rem;
   font-size: 1.5rem;
+  color: #000;
+  font-weight: 500;
+  margin: 2rem 0;
+  background-color: transparent;
+  border: 0.2rem solid #000;
+}
+
+.contact-wrapper .contact-form-wrapper .contact-form .form-control::-webkit-input-placeholder {
+  color: #000;
+  font-weight: 500;
+}
+
+.contact-wrapper .contact-form-wrapper .contact-form .form-control:-ms-input-placeholder {
+  color: #000;
+  font-weight: 500;
+}
+
+.contact-wrapper .contact-form-wrapper .contact-form .form-control::-ms-input-placeholder {
+  color: #000;
+  font-weight: 500;
+}
+
+.contact-wrapper .contact-form-wrapper .contact-form .form-control::placeholder {
+  color: #000;
+  font-weight: 500;
+}
+
+.contact-wrapper .contact-form-wrapper .contact-form textarea.form-control {
+  height: 10rem;
+  margin-top: 0;
+}
+
+.contact-wrapper .contact-form-wrapper .contact-form .action-btn .btn-outline-secondary {
+  width: 55%;
+  border: 0.2rem solid #000;
+  padding: 0.7rem 1rem;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #000;
+}
+
+.contact-wrapper .contact-form-wrapper .contact-form .action-btn .btn-outline-secondary:hover {
+  background-color: transparent;
 }
 
 @media (max-width: 767.98px) {
-  .contact-wrapper .gx-5 {
-    --bs-gutter-x: 10rem;
+  .contact-wrapper {
+    padding: 7rem 0;
+    background-position: unset;
+  }
+  .contact-wrapper .section-desc {
+    font-size: 1.5rem;
+    line-height: 1.3;
+  }
+  .contact-wrapper .contact-form-wrapper {
+    width: 90%;
+    padding: 3rem;
+    background-image: none;
+    background-color: #ffffffb5;
+  }
+  .contact-wrapper .contact-form-wrapper .contact-form {
+    width: 80%;
   }
 }
 
@@ -6724,14 +6791,8 @@ footer .sec-ttl {
   }
 }
 
-@media (max-width: 350px) {
-  .contact-wrapper .gx-5 {
-    --bs-gutter-x: 3rem;
-  }
-}
-
 .contact-page footer {
-  background-color: transparent;
+  background-color: #000;
 }
 
 .contact-page .magazine-detail-wrapper .magazine-detail-ttl {
