--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -5774,15 +5774,31 @@ footer {
         margin-top: 1.5rem;
         padding: 0 2rem;
 
+        h6 {
+          color: #006fb7;
+          margin-bottom: 0.5rem;
+          font-size: 1.4rem;
+          font-weight: 500;
+          line-height: 1.2;
+        }
+
         .form-label {
           font-size: 1.3rem;
-          color: #006fb7;
+          color: #333;
           font-weight: 500;
+          display: flex;
+          align-items: center;
+          transition: all 0.3s ease-in;
         }
 
         .form-control {
           min-height: 4.8rem;
           font-size: 1.5rem;
+          border: 0.2rem solid #009aff;
+
+          &:focus {
+            box-shadow: none;
+          }
         }
 
         textarea {
