--- a/css/main.css
+++ b/css/main.css
@@ -6540,15 +6540,37 @@ footer .sec-ttl {
   padding: 0 2rem;
 }
 
+.profile-detail-wrapper .profile-details-section .profile-update-form .form-tile h6 {
+  color: #006fb7;
+  margin-bottom: 0.5rem;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
 .profile-detail-wrapper .profile-details-section .profile-update-form .form-tile .form-label {
   font-size: 1.3rem;
-  color: #006fb7;
+  color: #333;
   font-weight: 500;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
 }
 
 .profile-detail-wrapper .profile-details-section .profile-update-form .form-tile .form-control {
   min-height: 4.8rem;
   font-size: 1.5rem;
+  border: 0.2rem solid #009aff;
+}
+
+.profile-detail-wrapper .profile-details-section .profile-update-form .form-tile .form-control:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .profile-detail-wrapper .profile-details-section .profile-update-form .form-tile textarea.form-control {
