--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -3492,8 +3492,9 @@ footer {
           margin-top: 1rem;
         }
 
-        h6 {
+        h3 {
           font-size: 2.5rem;
+          font-weight: 500;
         }
 
         .magazine-desc {
