--- a/css/cms.css
+++ b/css/cms.css
@@ -4363,7 +4363,12 @@ footer {
       position: relative;
       height: 100%; }
     .my-space-page .my-space-wrapper .my-space-content-wrapper {
-      min-height: 100vh; }
+      min-height: 100vh;
+      position: fixed;
+      right: 0; }
+      @media (max-width: 991.98px) {
+        .my-space-page .my-space-wrapper .my-space-content-wrapper {
+          display: none; } }
     .my-space-page .my-space-wrapper .k-state-selecting {
       color: #fff;
       background-color: #0d6efd !important; }
