--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -182,6 +182,7 @@ header {
 
               & > a {
                 border-radius: 100%;
+                display: block;
                 overflow: hidden;
                 width:34px;
                 height: 34px;
@@ -190,7 +191,7 @@ header {
 
                 img {
                   position: absolute;
-                  min-height: 100%;
+                  height: 100%;
                   min-width: 100%;
                   left: 50%;
                   top: 50%;
