--- a/css/main.css
+++ b/css/main.css
@@ -996,6 +996,7 @@ header {
             border: none; }
             header .header-wrapper .menu nav .navbar-nav .nav-item:last-child > a {
               border-radius: 100%;
+              display: block;
               overflow: hidden;
               width: 34px;
               height: 34px;
@@ -1003,7 +1004,7 @@ header {
               position: relative; }
               header .header-wrapper .menu nav .navbar-nav .nav-item:last-child > a img {
                 position: absolute;
-                min-height: 100%;
+                height: 100%;
                 min-width: 100%;
                 left: 50%;
                 top: 50%;
