[CSS] headings fix

--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -2556,6 +2556,13 @@ footer {
           line-height: 1.5;
           font-weight: 500;
         }
+
+        h3 {
+          font-size: 2.9rem;
+          line-height: 3.5rem;
+          font-weight: 500;
+          margin-bottom: 12px;
+        }
       }
     }
 
@@ -2583,8 +2590,10 @@ footer {
         }
 
         h3 {
-          font-size: 2.5rem;
+          font-size: 3.9rem;
+          line-height: 4.5rem;
           font-weight: 500;
+          margin-bottom: 12px;
         }
 
         .magazine-desc {
