--- a/css/main.css
+++ b/css/main.css
@@ -2391,6 +2391,11 @@ footer {
         font-size: 1.5rem;
         line-height: 1.5;
         font-weight: 500; }
+      .magazine-wrapper .magazine-tiles .magazine-tile .magazine-content h3 {
+        font-size: 2.9rem;
+        line-height: 3.5rem;
+        font-weight: 500;
+        margin-bottom: 12px; }
     .magazine-wrapper .magazine-tiles .magazine-main-tile {
       position: relative;
       padding: 0 1.5rem; }
@@ -2409,8 +2414,10 @@ footer {
           font-weight: 500;
           margin-top: 1rem; }
         .magazine-wrapper .magazine-tiles .magazine-main-tile .magazine-main-content h3 {
-          font-size: 2.5rem;
-          font-weight: 500; }
+          font-size: 3.9rem;
+          line-height: 4.5rem;
+          font-weight: 500;
+          margin-bottom: 12px; }
         .magazine-wrapper .magazine-tiles .magazine-main-tile .magazine-main-content .magazine-desc {
           font-size: 1.5rem;
           line-height: 1.5;
